@@ -2613,13 +2613,16 @@ CREATE TABLE filecontainers (
 	description text NOT NULL,
 	netdevid int(11) DEFAULT NULL,
 	netnodeid int(11) DEFAULT NULL,
+	messageid int(11) DEFAULT NULL,
 	PRIMARY KEY (id),
 	CONSTRAINT filecontainers_creatorid_fkey
 		FOREIGN KEY (creatorid) REFERENCES users (id) ON DELETE SET NULL ON UPDATE CASCADE,
 	CONSTRAINT filecontainers_netdevid_fkey
 		FOREIGN KEY (netdevid) REFERENCES netdevices (id) ON DELETE CASCADE ON UPDATE CASCADE,
 	CONSTRAINT filecontainers_netnodeid_fkey
-		FOREIGN KEY (netnodeid) REFERENCES netnodes (id) ON DELETE CASCADE ON UPDATE CASCADE
+		FOREIGN KEY (netnodeid) REFERENCES netnodes (id) ON DELETE CASCADE ON UPDATE CASCADE,
+	CONSTRAINT filecontainers_messageid_fkey
+		FOREIGN KEY (messageid) REFERENCES messages (id) ON DELETE CASCADE ON UPDATE CASCADE
 ) ENGINE=InnoDB;
 
 # --------------------------------------------------------
@@ -3570,4 +3573,4 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2019100901');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2019101000');
